test(scenario-designer): review feed back

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
@@ -38,6 +38,7 @@
                 type="text"
                 placeholder="Enter endpoint name"
                 (blur)="formatActionName()"
+                data-testid="name"
               />
             </tock-form-control>
           </div>
