test(scenario-designer): tests

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
@@ -38,6 +38,7 @@
                 placeholder="Enter new context name"
                 (blur)="formatContextName()"
                 autofocusElement
+                data-testid="name"
               />
             </tock-form-control>
           </div>
