--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-create/intent-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-create/intent-create.component.html
@@ -59,6 +59,7 @@
             type="text"
             placeholder="Enter name"
             (keyup)="formatNameInput()"
+            data-testid="name"
           />
         </tock-form-control>
       </div>
