feat(scenarios): Compatibility updates with new back end scenarios api : uppercase SCENARIO_STATE constants, ignore updateDate modification when checking canDeactivate, scenarios json export

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -94,6 +94,15 @@
             nbButton
             ghost
             shape="round"
+            nbTooltip="Download"
+            (click)="download(scenario)"
+          >
+            <nb-icon icon="download-outline"></nb-icon>
+          </button>
+          <button
+            nbButton
+            ghost
+            shape="round"
             nbTooltip="Delete"
             (click)="delete($event, scenario)"
           >
