--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -39,31 +39,31 @@
 </div>
 
 <nb-accordion
-  *ngFor="let scenario of scenarios"
   class="mb-2"
-  [class.selected]="selectedScenario?.id === scenario.id"
+  *ngFor="let saga of sagas"
 >
-  <nb-accordion-item>
+  <!-- [class.selected]="selectedScenario?.id === scenario.id" -->
+  <nb-accordion-item (collapsedChange)="collapsedChange($event, saga)">
     <nb-accordion-item-header>
       <div class="grid-columns">
         <div>
           <div class="font-weight-bold initial-capitalize">
-            {{ scenario.name }}
+            {{ saga.name }}
           </div>
           <span class="text-muted truncate">
-            {{ scenario.description }}
+            {{ saga.description }}
           </span>
         </div>
 
         <div class="initial-capitalize">
-          {{ scenario.category }}
+          {{ saga.category }}
         </div>
 
         <div>
           <nb-tag-list>
             <nb-tag
               appearance="filled"
-              *ngFor="let tag of scenario.tags"
+              *ngFor="let tag of saga.tags"
               [text]="tag"
               status="basic"
               size="tiny"
@@ -72,39 +72,31 @@
         </div>
 
         <div class="actions">
-          <button
-            nbButton
-            ghost
-            shape="round"
-            nbTooltip="Edit"
-            (click)="edit($event, scenario)"
-          >
-            <nb-icon icon="edit-outline"></nb-icon>
-          </button>
           <a
+            *ngIf="sagaHasDraft(saga)"
             nbButton
             ghost
             shape="round"
             nbTooltip="Designer"
-            [routerLink]="'./' + scenario.id"
+            (click)="design($event, saga)"
           >
             <nb-icon icon="color-palette-outline"></nb-icon>
           </a>
+          <!-- <button
+              nbButton
+              ghost
+              shape="round"
+              nbTooltip="Edit"
+              (click)="edit($event, saga)"
+            >
+              <nb-icon icon="edit-outline"></nb-icon>
+            </button> -->
           <button
             nbButton
             ghost
             shape="round"
-            nbTooltip="Download"
-            (click)="download(scenario)"
-          >
-            <nb-icon icon="download-outline"></nb-icon>
-          </button>
-          <button
-            nbButton
-            ghost
-            shape="round"
-            nbTooltip="Delete"
-            (click)="delete($event, scenario)"
+            nbTooltip="Delete scenarios saga and corresponding story"
+            (click)="deleteSaga($event, saga)"
           >
             <nb-icon icon="trash-2-outline"></nb-icon>
           </button>
@@ -114,51 +106,83 @@
     <nb-accordion-item-body>
       <div
         class="d-flex justify-content-between"
-        *ngFor="let version of versions"
+        *ngFor="let scenario of saga.scenarios"
       >
         <div
           class="row"
           style="width: 100%"
         >
-          <div class="col-2">
-            <span [ngClass]="{ 'font-weight-bold': version.current }"> {{ version.date }} </span>
+          <div class="col-3">
+            <span
+              [ngClass]="{ 'font-weight-bold': scenario.state === SCENARIO_STATE.current }"
+              [nbTooltip]="scenario.createDate | date: 'y/MM/dd HH:mm:ss'"
+            >
+              {{ scenario.createDate | date: 'y/MM/dd' }}
+            </span>
+          </div>
+          <div
+            class="col-3 d-flex"
+            [ngClass]="{ 'font-weight-bold': scenario.state === SCENARIO_STATE.current }"
+          >
+            {{ scenario.state }}
             <nb-icon
-              *ngIf="version.current"
+              *ngIf="scenario.state === SCENARIO_STATE.current"
               status="success"
               icon="checkmark-outline"
+              class="min-width-1em"
             ></nb-icon>
           </div>
-          <div class="text-muted font-italic col">
-            {{ version.description }}
+          <div class="col-6 text-muted font-italic col">
+            {{ scenario.description }}
           </div>
         </div>
+
         <div class="d-flex">
           <button
-            *ngIf="version.freezed"
             nbButton
             ghost
             shape="round"
-            nbTooltip="View"
+            nbTooltip="Open scenario"
+            [routerLink]="'./' + scenario.id"
           >
-            <nb-icon icon="eye-outline"></nb-icon>
+            <nb-icon
+              *ngIf="scenario.state !== SCENARIO_STATE.draft"
+              icon="eye-outline"
+            ></nb-icon>
+            <nb-icon
+              *ngIf="scenario.state === SCENARIO_STATE.draft"
+              icon="color-palette-outline"
+            ></nb-icon>
           </button>
+
           <button
-            *ngIf="version.freezed"
             nbButton
             ghost
             shape="round"
             nbTooltip="Copy and edit a new version"
+            (click)="duplicate(scenario)"
           >
             <nb-icon icon="copy-outline"></nb-icon>
           </button>
+
           <button
-            *ngIf="!version.freezed"
             nbButton
             ghost
             shape="round"
-            nbTooltip="Edit"
+            nbTooltip="Export scenario"
+            (click)="download(scenario)"
           >
-            <nb-icon icon="color-palette-outline"></nb-icon>
+            <nb-icon icon="download-outline"></nb-icon>
+          </button>
+
+          <button
+            nbButton
+            ghost
+            shape="round"
+            nbTooltip="Delete"
+            (click)="delete($event, scenario)"
+          >
+            <nb-icon icon="trash-2-outline"></nb-icon>
           </button>
         </div>
       </div>
