--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -43,7 +43,7 @@
   *ngFor="let saga of sagas"
 >
   <!-- [class.selected]="selectedScenario?.id === scenario.id" -->
-  <nb-accordion-item (collapsedChange)="collapsedChange($event, saga)">
+  <nb-accordion-item>
     <nb-accordion-item-header>
       <div class="grid-columns">
         <div>
@@ -73,14 +73,20 @@
 
         <div class="actions">
           <a
-            *ngIf="sagaHasDraft(saga)"
             nbButton
             ghost
             shape="round"
             nbTooltip="Designer"
             (click)="design($event, saga)"
           >
-            <nb-icon icon="color-palette-outline"></nb-icon>
+            <nb-icon
+              *ngIf="sagaHasDraft(saga)"
+              icon="color-palette-outline"
+            ></nb-icon>
+            <nb-icon
+              *ngIf="!sagaHasDraft(saga)"
+              icon="eye-outline"
+            ></nb-icon>
           </a>
           <!-- <button
               nbButton
