feat(scenarios): batch scenarios exports + misc

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -1,4 +1,7 @@
-<div class="grid-columns grid-columns-header mb-1">
+<div
+  class="grid-columns grid-columns-header mb-1"
+  *ngIf="sagas.length"
+>
   <div>
     <span
       (click)="setOrderBy('name')"
