review feed back

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -1,7 +1,4 @@
-<div
-  class="grid-columns grid-columns-header mb-1"
-  *ngIf="sagas.length"
->
+<div class="grid-columns grid-columns-header mb-1">
   <div>
     <span
       (click)="setOrderBy('name')"
