--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -61,21 +61,14 @@
       class="loading"
       [nbSpinner]="loading.list"
     >
-      <nb-card *ngIf="!loading.list && (!sagas?.length || !filteredSagas.length)">
-        <nb-card-body class="d-flex">
-          <img
-            src="{{ baseHref }}assets/images/best_bot_gray.png"
-            class="tock-robot mr-4"
-          />
-          <div>
-            <h2 class="text-muted">No Scenario found</h2>
-            You may create a new one using above button "Create".
-          </div>
-        </nb-card-body>
-      </nb-card>
+      <tock-no-data-found
+        *ngIf="!loading.list && !paginatedSagas.length"
+        title="No Scenario found"
+        message="You may create a new one using above button &#34;Create&#34;."
+      ></tock-no-data-found>
 
       <tock-scenario-list-simple
-        *ngIf="!loading.list"
+        *ngIf="!loading.list && paginatedSagas.length"
         [nbSpinner]="loading.delete"
         [sagas]="paginatedSagas"
         [selectedScenario]="scenarioEdit"
