--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-export/scenario-export.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-export/scenario-export.component.html
@@ -24,10 +24,7 @@
             formControlName="allOrCurrentOnly"
             name="reactive-forms-group"
           >
-            <nb-radio value="one"
-              >For each saga, export only the current scenario or the most recent draft
-              version</nb-radio
-            >
+            <nb-radio value="one">For each saga, export only the current scenario or the most recent draft version</nb-radio>
             <nb-radio value="all">Export all scenarios versions of all sagas</nb-radio>
           </nb-radio-group>
         </div>
@@ -38,6 +35,9 @@
   <nb-card-footer class="d-flex justify-content-between">
     <button
       nbButton
+      outline
+      status="primary"
+      size="small"
       (click)="cancel()"
     >
       Cancel
@@ -45,6 +45,7 @@
     <button
       nbButton
       status="primary"
+      size="small"
       (click)="export()"
     >
       Export
