--- a/bot/admin/web/src/app/shared/file-upload/file-upload.component.scss
+++ b/bot/admin/web/src/app/shared/file-upload/file-upload.component.scss
@@ -20,8 +20,7 @@
 
       &.dragHover {
         border: 2px solid nb-theme(color-info-500);
-        box-shadow: inset 0 8px 17px 2px nb-theme(color-info-transparent-100),
-          inset 0 3px 14px 2px nb-theme(color-info-transparent-300),
+        box-shadow: inset 0 8px 17px 2px nb-theme(color-info-transparent-100), inset 0 3px 14px 2px nb-theme(color-info-transparent-300),
           inset 0 5px 5px -3px nb-theme(color-info-transparent-500);
       }
 
@@ -97,6 +96,17 @@
           outline: none;
           box-shadow: 0 0 0 0.375rem nb-theme(color-basic-700);
         }
+      }
+    }
+
+    &:disabled + label {
+      border-color: nb-theme(color-basic-transparent-300);
+      color: nb-theme(color-basic-transparent-600);
+
+      .button {
+        background-color: nb-theme(color-basic-transparent-300);
+        border-color: nb-theme(color-danger-disabled);
+        color: nb-theme(color-danger-400);
       }
     }
   }
