feat(shared): add css indicator when focus to the file upload component

--- a/bot/admin/web/src/app/shared/file-upload/file-upload.component.scss
+++ b/bot/admin/web/src/app/shared/file-upload/file-upload.component.scss
@@ -109,6 +109,10 @@
         color: nb-theme(color-danger-400);
       }
     }
+
+    &:focus + label {
+      border-color: nb-theme(color-info-500);
+    }
   }
 
   .inputfile + label::-webkit-scrollbar {
