refactor(scenario-import|scenario-export): modify tooltip label of close button

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
@@ -6,7 +6,7 @@
       nbButton
       ghost
       shape="round"
-      nbTooltip="Cancel"
+      nbTooltip="Close"
       (click)="importCancel()"
       class="ml-3"
     >
