--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-export/scenario-export.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-export/scenario-export.component.html
@@ -6,7 +6,7 @@
       nbButton
       ghost
       shape="round"
-      nbTooltip="Cancel"
+      nbTooltip="Close"
       (click)="cancel()"
       class="ml-3"
     >
