feat(scenario-import): add autofocus to input file

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
@@ -31,6 +31,7 @@
               <tock-file-upload
                 id="importFile"
                 formControlName="filesSources"
+                [autofocus]="true"
                 [fullWidth]="true"
                 [multiple]="true"
                 [fileTypeAccepted]="['json']"
