--- a/bot/admin/web/src/app/shared/file-upload/file-upload.component.html
+++ b/bot/admin/web/src/app/shared/file-upload/file-upload.component.html
@@ -8,6 +8,7 @@
     class="inputfile"
     [disabled]="disabled"
     [multiple]="multiple"
+    [autofocusElement]="autofocus"
     data-testid="input-file"
   />
   <label
