--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -8,7 +8,7 @@
       shape="round"
       nbTooltip="Export scenarios dumps"
       [disabled]="!configurations?.length"
-      (click)="callExportScenario()"
+      (click)="openExportScenario()"
       [disabled]="!sagas.length"
     >
       <nb-icon icon="download-outline"></nb-icon>
@@ -19,7 +19,7 @@
       shape="round"
       nbTooltip="Import scenarios dumps"
       [disabled]="!configurations?.length"
-      (click)="callImportScenario()"
+      (click)="openImportScenario()"
     >
       <nb-icon icon="upload-outline"></nb-icon>
     </button>
@@ -36,7 +36,7 @@
   </section>
 </div>
 
-<section [class.grid]="isSidePanelOpen">
+<section [class.grid]="isSidePanelOpen.edit || isSidePanelOpen.export || isSidePanelOpen.import">
   <nb-alert
     *ngIf="configurations?.length === 0"
     class="alert-config flex-row align-items-center"
@@ -95,13 +95,28 @@
 
   <tock-scenario-edit
     #scenarioEditComponent
-    *ngIf="isSidePanelOpen"
+    *ngIf="isSidePanelOpen.edit"
     class="aside"
     [loading]="loading.edit"
     [scenario]="scenarioEdit"
-    (onClose)="closeSidePanel()"
+    (onClose)="closeSidePanel('edit')"
     (onSave)="saveScenario($event)"
   ></tock-scenario-edit>
+
+  <tock-scenario-import
+    #scenarioImportComponent
+    *ngIf="isSidePanelOpen.import"
+    class="aside"
+    (onClose)="closeSidePanel('import')"
+  ></tock-scenario-import>
+
+  <tock-scenario-export
+    #scenarioExportComponent
+    *ngIf="isSidePanelOpen.export"
+    class="aside"
+    [sagas]="sagas"
+    (onClose)="closeSidePanel('export')"
+  ></tock-scenario-export>
 </section>
 
 <ng-template #duplicationModal>
@@ -153,6 +168,9 @@
     <nb-card-footer class="d-flex justify-content-between">
       <button
         nbButton
+        outline
+        status="primary"
+        size="small"
         (click)="duplicationCancel()"
       >
         Cancel
@@ -160,6 +178,7 @@
       <button
         nbButton
         status="primary"
+        size="small"
         (click)="duplicationSubmit()"
         [disabled]="!canSaveDuplication"
       >
