--- a/bot/admin/web/src/app/shared/file-upload/file-upload.component.scss
+++ b/bot/admin/web/src/app/shared/file-upload/file-upload.component.scss
@@ -8,7 +8,7 @@
     height: 0.1px;
     opacity: 0;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     z-index: -1;
 
     + label {
