--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card [nbSpinner]="loading">
   <nb-card-header class="d-flex justify-content-between align-items-center">
     <h4>Import scenarios dumps</h4>
 
@@ -7,7 +7,7 @@
       ghost
       shape="round"
       nbTooltip="Close"
-      (click)="importCancel()"
+      (click)="close()"
       class="ml-3"
     >
       <nb-icon icon="close-outline"></nb-icon>
@@ -43,13 +43,13 @@
       </div>
     </form>
   </nb-card-body>
-  <nb-card-footer class="d-flex justify-content-between">
+  <nb-card-footer class="grid-button">
     <button
       nbButton
       outline
       status="primary"
       size="small"
-      (click)="importCancel()"
+      (click)="close()"
     >
       Cancel
     </button>
