feat(scenario-import): add alert message when not all files are imported, refacto

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-import/scenario-import.component.html
@@ -41,6 +41,23 @@
           </div>
         </div>
       </div>
+
+      <nb-alert
+        *ngIf="importFilesInError.length"
+        status="warning"
+        closable
+        (close)="closeAlertImportFilesInError()"
+      >
+        <small>The following files were not imported:</small>
+        <ul>
+          <li
+            *ngFor="let file of importFilesInError"
+            class="text-break"
+          >
+            <small>{{ file }}</small>
+          </li>
+        </ul>
+      </nb-alert>
     </form>
   </nb-card-body>
   <nb-card-footer class="grid-button">
